--- a/MTN2/MTN2.csproj
+++ b/MTN2/MTN2.csproj
@@ -41,6 +41,9 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="StardewModdingAPI.Toolkit">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Stardew Valley\smapi-internal\StardewModdingAPI.Toolkit.dll</HintPath>
+    </Reference>
     <Reference Include="StardewModdingAPI.Toolkit.CoreInterfaces">
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Stardew Valley\smapi-internal\StardewModdingAPI.Toolkit.CoreInterfaces.dll</HintPath>
     </Reference>
@@ -73,14 +76,15 @@
     <Compile Include="Menus\CharacterCustomizationMTN.cs" />
     <Compile Include="ModEntry.cs" />
     <Compile Include="Patch.cs" />
+    <Compile Include="Patches\Game1\loadForNewGame.Patch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="manifest.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Locations\" />
-    <Folder Include="Patches\" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Pathoschild.Stardew.ModBuildConfig.2.2.0\analyzers\dotnet\cs\StardewModdingAPI.ModBuildConfig.Analyzer.dll" />
