--- a/MTN2/MTN2.csproj
+++ b/MTN2/MTN2.csproj
@@ -59,6 +59,8 @@
   <ItemGroup>
     <Compile Include="CustomFarm.cs" />
     <Compile Include="CustomFarmManager.cs" />
+    <Compile Include="Locations\AdvancedScienceHouse.cs" />
+    <Compile Include="MapData\FileType.cs" />
     <Compile Include="MapData\Forage.cs" />
     <Compile Include="MapData\Ore.cs" />
     <Compile Include="MapData\Spawn\LargeDebris.cs" />
@@ -83,9 +85,7 @@
     <None Include="manifest.json" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Locations\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Analyzer Include="..\packages\Pathoschild.Stardew.ModBuildConfig.2.2.0\analyzers\dotnet\cs\StardewModdingAPI.ModBuildConfig.Analyzer.dll" />
   </ItemGroup>
