--- a/MTN2/MTN2.csproj
+++ b/MTN2/MTN2.csproj
@@ -89,7 +89,18 @@
     <Compile Include="Patches\Farm\LeftClick.cs" />
     <Compile Include="Patches\Farm\ResetLocalState.cs" />
     <Compile Include="Patches\Farm\UpdateWhenCurrentLocation.cs" />
-    <Compile Include="Patches\Game1\loadForNewGame.Patch.cs" />
+    <Compile Include="Patches\Game1\loadForNewGame.cs" />
+    <Compile Include="Patches\GameLocation\loadObjects.cs" />
+    <Compile Include="Patches\GameLocation\startEvent.cs" />
+    <Compile Include="Patches\NetBuildingRef\ValueGetter.cs" />
+    <Compile Include="Patches\NPC\updateConstructionAnimation.cs" />
+    <Compile Include="Patches\Objects\totemWarpForReal.cs" />
+    <Compile Include="Patches\Pet\dayUpdate.cs" />
+    <Compile Include="Patches\Pet\setAtFarmPosition.cs" />
+    <Compile Include="Patches\SaveGame\loadDataToLocations.cs" />
+    <Compile Include="Patches\TitleMenu\setUpIcons.cs" />
+    <Compile Include="Patches\Wand\wandWarpForReal.cs" />
+    <Compile Include="Patches\WorldChangeEvent\setUp.cs" />
     <Compile Include="PatchManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
