--- a/MTN2/manifest.json
+++ b/MTN2/manifest.json
@@ -4,7 +4,7 @@
   "Version": "2.0.0-alpha",
   "Description": "Greatly Customizes farms, along with managing multitude amount of custom farm types.",
   "UniqueID": "SgtPickles.MTN",
-  "EntryDll": "MTN.dll",
+  "EntryDll": "MTN2.dll",
   "MinimumApiVersion": "2.9",
   "UpdateKeys": [ "Nexus:2256", "Chucklefish:5343" ]
 }
