--- a/MTN2/manifest.json
+++ b/MTN2/manifest.json
@@ -1,10 +1,10 @@
 {
   "Name": "MTN",
   "Author": "SgtPickles aka GameMX",
-  "Version": "2.0.0-alpha",
+  "Version": "2.0.0-alpha1",
   "Description": "Greatly Customizes farms, along with managing multitude amount of custom farm types.",
   "UniqueID": "SgtPickles.MTN",
-  "EntryDll": "MTN2.dll",
+  "EntryDll": "MTN.dll",
   "MinimumApiVersion": "2.9",
   "UpdateKeys": [ "Nexus:2256", "Chucklefish:5343" ]
 }
