--- a/MTN2/MTN2.csproj
+++ b/MTN2/MTN2.csproj
@@ -117,7 +117,7 @@
     <Compile Include="Patches\Farm\LeftClick.cs" />
     <Compile Include="Patches\Farm\ResetLocalState.cs" />
     <Compile Include="Patches\Farm\UpdateWhenCurrentLocation.cs" />
-    <Compile Include="Patches\Game1\LoadForNewGame.cs" />
+    <Compile Include="Patches\Game1\loadForNewGame.cs" />
     <Compile Include="Patches\GameLocation\loadObjects.cs" />
     <Compile Include="Patches\GameLocation\performAction.cs" />
     <Compile Include="Patches\GameLocation\startEvent.cs" />
